--- a/test/.classpath
+++ b/test/.classpath
@@ -8,6 +8,7 @@
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/resources"/>
 	<classpathentry kind="src" path="src/main/api"/>
-	<classpathentry kind="src" path="src/test/munit"/>
+	<classpathentry kind="con" path="MUNIT_RUNTIME"/>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/munit"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
